fixed UI for mobile devices, TODO -> icons don't show up on mobile when using get current position

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ textarea {
 
 #search-box:focus,
 #search-box:hover {
-  background-color: var(--primary-color);
+  background-color: var(--primary-color-focus);
 }
 
 .cards {
